-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b28
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056360 | emb-9 | Tobias Hartmann | P4 | Resolved | Fixed | b28 |
1438 CountedLoopEnd === 1248 2028 [[ 1674 1332 ]] [lt] P=0.900000, C=-1.000000 !orig=[1331] !jvms: URI::isWellFormedAddress @ bci:131
# Internal Error (/opt/jprt/T/P1/220758.vkozlov/s/src/share/vm/opto/phaseX.cpp:943), pid=27489, tid=140204714575616
# assert(false) failed: modified node is not on IGVN._worklist
Stack: [0x00007f83f4254000,0x00007f83f4355000], sp=0x00007f83f434f4f0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10766dc] VMError::report_and_die()+0x15c;; VMError::report_and_die()+0x15c
V [libjvm.so+0x7393ab] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xe51d08] PhaseIterGVN::init_verifyPhaseIterGVN()+0x238;; PhaseIterGVN::init_verifyPhaseIterGVN()+0x238
V [libjvm.so+0xe529ff] PhaseIterGVN::optimize()+0x1f;; PhaseIterGVN::optimize()+0x1f
V [libjvm.so+0xc50c51] PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181;; PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181
V [libjvm.so+0x6b2565] Compile::Optimize()+0x685;; Compile::Optimize()+0x685
V [libjvm.so+0x6b4074] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4
V [libjvm.so+0x5861df] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f
V [libjvm.so+0x6bfa66] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816
V [libjvm.so+0x6c0c98] CompileBroker::compiler_thread_loop()+0x528;; CompileBroker::compiler_thread_loop()+0x528
V [libjvm.so+0xff6b84] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xff6eb2] JavaThread::run()+0x2a2;; JavaThread::run()+0x2a2
V [libjvm.so+0xdce962] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
C [libpthread.so.0+0x7851]
ILW = MLH = P4
# Internal Error (/opt/jprt/T/P1/220758.vkozlov/s/src/share/vm/opto/phaseX.cpp:943), pid=27489, tid=140204714575616
# assert(false) failed: modified node is not on IGVN._worklist
Stack: [0x00007f83f4254000,0x00007f83f4355000], sp=0x00007f83f434f4f0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10766dc] VMError::report_and_die()+0x15c;; VMError::report_and_die()+0x15c
V [libjvm.so+0x7393ab] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xe51d08] PhaseIterGVN::init_verifyPhaseIterGVN()+0x238;; PhaseIterGVN::init_verifyPhaseIterGVN()+0x238
V [libjvm.so+0xe529ff] PhaseIterGVN::optimize()+0x1f;; PhaseIterGVN::optimize()+0x1f
V [libjvm.so+0xc50c51] PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181;; PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181
V [libjvm.so+0x6b2565] Compile::Optimize()+0x685;; Compile::Optimize()+0x685
V [libjvm.so+0x6b4074] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4
V [libjvm.so+0x5861df] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f
V [libjvm.so+0x6bfa66] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816
V [libjvm.so+0x6c0c98] CompileBroker::compiler_thread_loop()+0x528;; CompileBroker::compiler_thread_loop()+0x528
V [libjvm.so+0xff6b84] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xff6eb2] JavaThread::run()+0x2a2;; JavaThread::run()+0x2a2
V [libjvm.so+0xdce962] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
C [libpthread.so.0+0x7851]
ILW = MLH = P4
- backported by
-
JDK-8056360 bigapps assert failure in C2: modified node is not on IGVN._worklist
-
- Resolved
-
- relates to
-
JDK-8068864 C2 failed: modified node is not on IGVN._worklist
-
- Resolved
-
-
JDK-8040213 C2 does not put all modified nodes on IGVN worklist
-
- Resolved
-