8053915: bigapps assert failure in C2: modified node is not on IGVN._worklist

Add modified node to the IGVN worklist in 'PhaseIdealLoop::do_range_check'.

Reviewed-by: kvn, roland